fix https://github.com/qouteall/ImmersivePortalsMod/issues/1009