@@ -6,16 +6,21 @@ import net.minecraft.client.gui.components.Button;
 import net.minecraft.client.gui.screens.Screen;
 import net.minecraft.client.gui.screens.worldselection.CreateWorldScreen;
 import net.minecraft.client.gui.screens.worldselection.WorldGenSettingsComponent;
+import net.minecraft.core.MappedRegistry;
 import net.minecraft.core.RegistryAccess;
 import net.minecraft.network.chat.Component;
 import net.minecraft.network.chat.TranslatableComponent;
 import net.minecraft.resources.ResourceKey;
+import net.minecraft.resources.ResourceLocation;
 import net.minecraft.server.packs.repository.PackRepository;
+import net.minecraft.server.packs.resources.ResourceManager;
 import net.minecraft.world.level.DataPackConfig;
 import net.minecraft.world.level.GameRules;
 import net.minecraft.world.level.Level;
 import net.minecraft.world.level.LevelSettings;
+import net.minecraft.world.level.dimension.LevelStem;
 import net.minecraft.world.level.levelgen.WorldGenSettings;
+import net.minecraft.world.level.storage.PrimaryLevelData;
 import org.spongepowered.asm.mixin.Final;
 import org.spongepowered.asm.mixin.Mixin;
 import org.spongepowered.asm.mixin.Shadow;
@@ -23,6 +28,8 @@ import org.spongepowered.asm.mixin.injection.At;
 import org.spongepowered.asm.mixin.injection.Inject;
 import org.spongepowered.asm.mixin.injection.Redirect;
 import org.spongepowered.asm.mixin.injection.callback.CallbackInfo;
+import org.spongepowered.asm.mixin.injection.callback.CallbackInfoReturnable;
+import qouteall.q_misc_util.MiscHelper;
 import qouteall.q_misc_util.dim_sync.DimId;
 import qouteall.imm_ptl.peripheral.altius_world.AltiusGameRule;
 import qouteall.imm_ptl.peripheral.altius_world.AltiusInfo;
@@ -34,7 +41,9 @@ import qouteall.q_misc_util.api.DimensionAPI;
 
 import javax.annotation.Nullable;
 import java.io.File;
+import java.util.HashSet;
 import java.util.List;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 @Mixin(CreateWorldScreen.class)
@@ -55,7 +64,10 @@ public abstract class MixinCreateWorldScreen extends Screen implements IECreateW
     private Button altiusButton;
     
     @Nullable
-    private AltiusScreen altiusScreen;
+    private AltiusScreen ip_altiusScreen;
+    
+    @Nullable
+    private WorldGenSettings ip_lastWorldGenSettings;
     
     protected MixinCreateWorldScreen(Component title) {
         super(title);
@@ -114,8 +126,8 @@ public abstract class MixinCreateWorldScreen extends Screen implements IECreateW
         Minecraft client, String resultFolder, LevelSettings levelInfo,
         RegistryAccess registryTracker, WorldGenSettings generatorOptions
     ) {
-        if (altiusScreen != null) {
-            AltiusInfo info = altiusScreen.getAltiusInfo();
+        if (ip_altiusScreen != null) {
+            AltiusInfo info = ip_altiusScreen.getAltiusInfo();
             
             if (info != null) {
                 AltiusManagement.dimStackToApply = info;
@@ -130,9 +142,24 @@ public abstract class MixinCreateWorldScreen extends Screen implements IECreateW
         client.createLevel(resultFolder, levelInfo, registryTracker, generatorOptions);
     }
     
+    
+    @Inject(
+        method = "method_40209",
+        at = @At("RETURN")
+    )
+    private void onTryingApplyNewDatapackLoading(ResourceManager resourceManager, DataPackConfig dataPackConfig, CallbackInfoReturnable<Pair> cir) {
+        Pair<PrimaryLevelData, RegistryAccess> returnValue = cir.getReturnValue();
+        
+        PrimaryLevelData primaryLevelData = returnValue.getFirst();
+        
+        WorldGenSettings worldGenSettings = primaryLevelData.worldGenSettings();
+        
+        ip_lastWorldGenSettings = worldGenSettings;
+    }
+    
     private void openAltiusScreen() {
-        if (altiusScreen == null) {
-            altiusScreen = new AltiusScreen(
+        if (ip_altiusScreen == null) {
+            ip_altiusScreen = new AltiusScreen(
                 (CreateWorldScreen) (Object) this,
                 this::portal_getDimensionList,
                 a -> {
@@ -141,30 +168,42 @@ public abstract class MixinCreateWorldScreen extends Screen implements IECreateW
             );
         }
         
-        Minecraft.getInstance().setScreen(altiusScreen);
+        Minecraft.getInstance().setScreen(ip_altiusScreen);
     }
     
     private List<ResourceKey<Level>> portal_getDimensionList() {
+        Helper.log("Getting the dimension list");
+        
+        // this won't contain custom dimensions
         WorldGenSettings rawGeneratorOptions = worldGenSettingsComponent.makeSettings(false);
         
+        WorldGenSettings copiedGeneratorOptions = new WorldGenSettings(
+            rawGeneratorOptions.seed(), rawGeneratorOptions.generateFeatures(),
+            rawGeneratorOptions.generateBonusChest(),
+            MiscHelper.filterAndCopyRegistry(
+                ((MappedRegistry<LevelStem>) rawGeneratorOptions.dimensions()),
+                (a, b) -> true
+            )
+        );
+        
         RegistryAccess registryManager = worldGenSettingsComponent.registryHolder();
-
-//        WorldGenSettings populated = WorldCreationDimensionHelper.populateGeneratorOptions1(
-//            rawGeneratorOptions, registryManager,
-//            portal_getResourcePackManager(),
-//            dataPacks
-//        );
         
-        // TODO check it
-        WorldGenSettings populated = rawGeneratorOptions;
+        // register custom dimensions including alternate dimensions
+        DimensionAPI.serverDimensionsLoadEvent.invoker().run(copiedGeneratorOptions, registryManager);
         
+        HashSet<ResourceKey<Level>> dims = new HashSet<>();
         
-        // register the alternate dimensions
-        DimensionAPI.serverDimensionsLoadEvent.invoker().run(populated, registryManager);
+        if (ip_lastWorldGenSettings != null) {
+            ip_lastWorldGenSettings.dimensions().keySet().forEach(id -> {
+                dims.add(DimId.idToKey(id));
+            });
+        }
         
-        return populated.dimensions().entrySet().stream().map(
-            e -> DimId.idToKey(e.getKey().location())
-        ).collect(Collectors.toList());
+        copiedGeneratorOptions.dimensions().keySet().forEach(id -> {
+            dims.add(DimId.idToKey(id));
+        });
+        
+        return dims.stream().toList();
     }
     
     @Override
